wordpress/deployment_maria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mariadb
    spec:
      containers:
        - image: linuxserver/mariadb:latest
          name: mariadb
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /config
          resources:
            limits:
              cpu: "2"
              memory: "1024Mi"
            requests:
              cpu: "1000m"
              memory: "512Mi"
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-mariadb
