wordpress/app_maria.yaml
#  kubectl create namespace wordpress

# run the following command to encode your secret for DEV/TEST :
# echo "YOUR_PASSWORD" -n | base64-encoded

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mariadb
    spec:
      containers:
        - image: linuxserver/mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /config
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-mariadb

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: wordpress
    tier: mariadb
