wordpress/app_wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
#        - image: wordpress:5.7.2-apache
#        - image: arm32v7/wordpress:latest
        - image: wordpress
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-wordpress

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
