wordpress/ingress.yaml
# replace mortylabs.com and andrewmorty.com with your own domains
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: wordpress-tls
      hosts:
        - mortylabs.com
        
  rules:
  - host: mortylabs.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress
              port:
                number: 80
